Fix margins for headers on small sizes

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -458,7 +458,8 @@ h1 {
         font-size: 50px;
     }
     #contact h1 {
-        margin: 60px 0 0;
+        margin: 80px 0 0;
+        font-size: 50px;
     }
     
     #contact h2 {
